<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{4975a585-f788-453e-9391-6aa63f206255}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	//Laitteistoon liitetyt globaalit muuttujat:
	//Tulot:
	safetyOk			: BOOL := TRUE;
	start 	AT%I*		: BOOL;
	stop	AT%I*	 	: BOOL;
	playCW	AT%I*		: BOOL;
	playCCW	AT%I*		: BOOL;
	//stepperSpeed	: INT := 0;
	tila1	AT%I*		: BOOL;
	tila2	AT%I*		: BOOL;
	
	//GUI
	startGUI 		: BOOL;
	stopGUI			: BOOL;
	resetGUI		: BOOL;
	asemannollausGUI : BOOL;
	triggerGUI		: BOOL;

	//Lähdöt:

	systemOnLight	: BOOL;
	safetyOkLight	: BOOL;
	startBtnLight	: BOOL;
	stopBtnLight	: BOOL;
	resetBtnLight	: BOOL;
	playCWBtnLight	: BOOL;
	playCCWBtnLight	: BOOL;
	
	//Muut globaalit muuttujat:
	
	driverMode		: INT := 0;
	vikamuisti		: BOOL := TRUE;
	blinker1000ms	: BOOL;
	muuVika			: BOOL;	
	systemOn		: BOOL;
	reset	AT%I*		: BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>