<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="control" Id="{f4192589-e639-46b2-82cf-0b85b345678c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM control
VAR
	driverModeVar	: INT :=1;
	driverMode1		: BOOL;
	driverMode2		: BOOL;
	driverMode3		: BOOL;
	invisibleGUI	: BOOL := FALSE;
	visibleGUI		: BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Laitteen tilan asetus:
CASE GVL.driverMode OF
	1:	IF GVL.start AND NOT(GVL.vikamuisti) THEN
			GVL.systemOn := TRUE;
			driverModeVar := GVL.driverMode;
		END_IF
		IF NOT(GVL.safetyOk) OR GVL.stop THEN
			GVL.systemOn := FALSE;
		END_IF
		
		IF NOT(GVL.safetyOk) THEN
			GVL.vikamuisti := TRUE;
		END_IF
		IF GVL.reset THEN
			GVL.vikamuisti := FALSE;
		END_IF
		
	2:	IF GVL.startGUI AND NOT(GVL.vikamuisti) THEN
			GVL.systemOn := TRUE;
			driverModeVar := GVL.driverMode;
		END_IF
		IF NOT(GVL.safetyOk) OR GVL.stopGUI THEN
			GVL.systemOn := FALSE;
		END_IF
		
		IF NOT(GVL.safetyOk) THEN
			GVL.vikamuisti := TRUE;
		END_IF
		IF GVL.resetGUI THEN
			GVL.vikamuisti := FALSE;
		END_IF
		
	3:	IF GVL.start AND NOT(GVL.vikamuisti) THEN
			GVL.systemOn := TRUE;
			driverModeVar := GVL.driverMode;
		END_IF
		IF NOT(GVL.safetyOk) OR GVL.stop THEN
			GVL.systemOn := FALSE;
		END_IF		
END_CASE

IF driverModeVar <> GVL.driverMode THEN
	GVL.systemOn := FALSE;
END_IF

IF GVL.driverMode = 3 THEN
	invisibleGUI := TRUE;
	visibleGUI := FALSE;
ELSE
	invisibleGUI := FALSE;
	visibleGUI := TRUE; 
END_IF

//IF GVL.start THEN
//	driverModeVar := GVL.driverMode;
//END_IF

IF GVL.tila1 AND NOT(GVL.tila2) THEN
	GVL.driverMode := 1;
	driverMode1 := FALSE;
ELSE
	driverMode1 := TRUE;
END_IF

IF GVL.tila2 AND NOT(GVL.tila1) THEN
	GVL.driverMode := 2;
	driverMode2 := FALSE;
ELSE
	driverMode2 := TRUE;
END_IF

IF NOT(GVL.tila1) AND NOT(GVL.tila2) THEN
	GVL.driverMode := 3;
	driverMode3 := FALSE;
ELSE
	driverMode3 := TRUE;
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="control">
      <LineId Id="6" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="65" Count="1" />
      <LineId Id="147" Count="0" />
      <LineId Id="67" Count="3" />
      <LineId Id="112" Count="0" />
      <LineId Id="72" Count="4" />
      <LineId Id="61" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="88" Count="1" />
      <LineId Id="87" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="81" Count="4" />
      <LineId Id="80" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="90" Count="1" />
      <LineId Id="149" Count="0" />
      <LineId Id="92" Count="2" />
      <LineId Id="64" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="145" Count="1" />
      <LineId Id="144" Count="0" />
      <LineId Id="153" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="156" Count="1" />
      <LineId Id="162" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="140" Count="1" />
      <LineId Id="100" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="124" Count="1" />
      <LineId Id="19" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="126" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="128" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="15" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>